local/logs/project.log
2017-10-07T05:41:37.151Z - normal: Load ~/.CocosCreator/settings.json
2017-10-07T05:41:37.165Z - normal: checking language setting...
2017-10-07T05:41:37.165Z - normal: Language: en
2017-10-07T05:41:41.540Z - success: protocol editor-framework registered
2017-10-07T05:41:41.540Z - success: protocol app registered
2017-10-07T05:41:41.540Z - success: protocol theme registered
2017-10-07T05:41:41.540Z - success: protocol profile registered
2017-10-07T05:41:41.540Z - success: protocol packages registered
2017-10-07T05:41:41.540Z - success: protocol unpack registerred
2017-10-07T05:41:41.540Z - success: protocol disable-commonjs registerred
2017-10-07T05:41:41.874Z - normal: connected!
2017-10-07T05:41:41.874Z - normal: Check project C:\Users\student\Desktop\Act1
2017-10-07T05:41:41.888Z - normal: Initializing Cocos2d
2017-10-07T05:41:44.050Z - normal: Initializing Asset Database
2017-10-07T05:41:44.094Z - success: protocol uuid registerred
2017-10-07T05:41:44.094Z - success: protocol db registerred
2017-10-07T05:41:44.094Z - success: protocol thumbnail registerred
2017-10-07T05:41:44.094Z - normal: Loading editor/builtin packages
2017-10-07T05:41:44.134Z - success: anysdk loaded
2017-10-07T05:41:44.323Z - success: assets loaded
2017-10-07T05:41:44.333Z - success: builder loaded
2017-10-07T05:41:44.333Z - success: hierarchy loaded
2017-10-07T05:41:44.343Z - success: inspector loaded
2017-10-07T05:41:44.343Z - success: keystore loaded
2017-10-07T05:41:44.343Z - success: node-library loaded
2017-10-07T05:41:44.353Z - success: package-asset loaded
2017-10-07T05:41:44.353Z - success: preferences loaded
2017-10-07T05:41:44.353Z - success: project-exporter loaded
2017-10-07T05:41:44.373Z - success: project-importer loaded
2017-10-07T05:41:44.373Z - success: project-settings loaded
2017-10-07T05:41:44.383Z - success: ui-kit loaded
2017-10-07T05:41:44.383Z - success: ui-grid loaded
2017-10-07T05:41:44.393Z - success: scene loaded
2017-10-07T05:41:44.393Z - success: sprite-editor loaded
2017-10-07T05:41:44.403Z - success: store loaded
2017-10-07T05:41:44.413Z - success: timeline loaded
2017-10-07T05:41:44.413Z - normal: Loading builtin packages
2017-10-07T05:41:44.413Z - success: asset-db-debugger loaded
2017-10-07T05:41:44.413Z - success: color-picker loaded
2017-10-07T05:41:44.423Z - success: console loaded
2017-10-07T05:41:44.423Z - success: package-manager loaded
2017-10-07T05:41:44.433Z - success: sdkbox loaded
2017-10-07T05:41:44.435Z - success: tester loaded
2017-10-07T05:41:44.435Z - success: ui-kit-preview-extra loaded
2017-10-07T05:41:44.435Z - success: ui-kit-preview loaded
2017-10-07T05:41:44.445Z - success: ui-tree loaded
2017-10-07T05:41:45.999Z - normal: Initializing project C:\Users\student\Desktop\Act1
2017-10-07T05:41:46.029Z - normal: Loading packages
2017-10-07T05:41:46.039Z - normal: Watching packages
2017-10-07T05:41:46.049Z - normal: Run Application
2017-10-07T05:41:47.124Z - success: preview server running at http://localhost:7456
2017-10-07T05:41:56.516Z - normal: 1.6.1
2017-10-07T06:42:20.123Z - failed: [db-task][sync-changes] Failed to import asset C:\Users\student\Desktop\Act1\assets\Scripts\ball.js, message: Compile error: SyntaxError: C:/Users/student/Desktop/Act1/assets/Scripts/ball.js: Unexpected token (94:23)
  92 |         } else if (this.accDown) {
  93 |             this.ySpeed -= 5 * this.acceleration * dt;
> 94 | 			if (this.node.y <= (*this.height-this.ballSize)) this.ySpeed = 0;
     | 			                    ^
  95 |         } else {
  96 | 			this.ySpeed = 0;
  97 | 		}
    at Parser.pp$5.raise (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp$3.parseExprAtom (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3750:12)
    at Parser.pp$3.parseExprSubscripts (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
    at Parser.pp$3.parseParenAndDistinguishExpression (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3828:26)
    at Parser.pp$3.parseExprAtom (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3709:19)
